# SDIZO-Project1

./: README.md
SDIZO/: CMakeLists.txt
SDIZO/SDIZO/: CMakeLists.txt  main.cpp
SDIZO/SDIZO/data/: 100.txt  1000.txt  2000.txt  500.txt  generate.py
SDIZO/SDIZO/include/: Array.hpp  Heap.hpp  List.hpp  ListNode.hpp  SDIZO.hpp  Timer.hpp  Tree.hpp  TreeNode.hpp
SDIZO/SDIZO/include/interface/: AutomaticTests.hpp  Enums.hpp  ManualTests.hpp  Menu.hpp  Tests.hpp
SDIZO/SDIZO/results/array/: 100-results.txt  1000-results.txt  10000-results.txt  2000-results.txt  500-results.txt  5000-results.txt  addAt-10.txt  addBack-10.txt  addFront-10.txt  removeAt-10.txt  removeBack-10.txt  removeFront-10.txt
SDIZO/SDIZO/results/heap/: 100-results.txt  1000-results.txt  10000-results.txt  2000-results.txt  500-results.txt  5000-results.txt  add-10.txt  removeRoot-10.txt
SDIZO/SDIZO/results/list/: 100-results.txt  1000-results.txt  10000-results.txt  2000-results.txt  500-results.txt  5000-results.txt  addAt-10.txt  addBack-10.txt  addFront-10.txt  removeAt-10.txt  removeBack-10.txt  removeFront-10.txt
SDIZO/SDIZO/results/tree/: 100-results.txt  1000-results.txt  10000-results.txt  2000-results.txt  500-results.txt  5000-results.txt  add-10.txt  remove-10.txt
SDIZO/SDIZO/src/: Array.cpp  Heap.cpp  List.cpp  Timer.cpp  Tree.cpp
SDIZO/SDIZO/src/interface/: AutomaticTests.cpp  ManualTests.cpp  Menu.cpp  Tests.cpp  Timer.cpp
